[tool.poetry]
name = "grpc-model"
version = "0.1.0"
description = ""
authors = ["Douglas Holman <douglas.holman@modzy.com>"]

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.34.0"
grpcio-tools = "^1.34.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.0.1"
mypy = "^0.782"
isort = "^5.3.2"
pre-commit = "^2.8.2"
pytest-cov = "^2.10.1"
pytest-grpc = "^0.8.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
